--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <body>
         <div class="content">
             <div class="box box-1">
-              <div class="box-content center">
-                Box 1
-              </div>
+                <div class="row row-1">
+                    <div class="row-content center"></div>
+                <div class="row row-2">
+                    Row two
+                </div>
             </div>
             <div class="box box-2">
               <div class="box-content center">
