--- a/index.html
+++ b/index.html
@@ -5,21 +5,91 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>02 // Data Self Visualization</title>
         <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     </head>
     <body>
         <div class="content">
             <div class="box box-1">
                 <div class="row row-1">
-                    <div class="row-content center"></div>
+                    <img src="screenshot/data_01.jpg" alt="netflix" />
+                </div>
                 <div class="row row-2">
-                    Row two
+                </div>
+                <div class="row row-3">
                 </div>
             </div>
+
             <div class="box box-2">
-              <div class="box-content center">
-                Box 2
-              </div>
+               <div class="row row-4">
+                </div>
+                <div class="row row-5">
+                </div>
+                <div class="row row-6">
+                </div>
+                <div class="row row-7">
+                </div>
             </div>
+
+            <div class="box box-3">
+                <div class="row row-8">
+                    Row eight
+                </div>
+                <div class="row row-9">
+                    41.96 HOURS OF MY WEEK WERE SPENT ON TECHNOLOGY.                 
+                </div>
+                <div class="row row-10">
+                   Row ten
+                </div>
+            </div>
+
+            <div class="box box-4">
+                <div class="row row-11">
+                    Row eleven
+                </div>
+                <div class="row row-12">
+                    Row twelve
+                </div>
+                <div class="row row-13">
+                    Row thirteen
+                </div>
+                <div class="row row-14">
+                    Row fourteen
+                </div>
+            </div>
+
+            <div class="box box-5">
+                <div class="row row-15">
+                    Row eleven
+                </div>
+                <div class="row row-16">
+                    Row twelve
+                </div>
+                <div class="row row-17">
+                    Row thirteen
+                </div>
+                <div class="row row-18">
+                    Row fourteen
+                </div>
+            </div>
+
+            <div class="box box-6">
+                <div class="row row-19">
+                    Row eleven
+                </div>
+                <div class="row row-20">
+                    Row twelve
+                </div>
+                <div class="row row-21">
+                    Row thirteen
+                </div>
+                <div class="row row-22">
+                    Row fourteen
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
+
+
+
