--- a/index.html
+++ b/index.html
@@ -14,31 +14,52 @@
                     <img src="screenshot/data_01.jpg" alt="netflix" />
                 </div>
                 <div class="row row-2">
+                    <img src="screenshot/data_02.jpg" alt="canvas" />
                 </div>
                 <div class="row row-3">
+                     <img src="screenshot/data_03.jpg" alt="yt" />
                 </div>
             </div>
 
             <div class="box box-2">
                <div class="row row-4">
-                </div>
-                <div class="row row-5">
-                </div>
+                    <img src="screenshot/data_04.jpg" alt="yt" />
+               </div>
+               <div class="row row-5">
+                    <img src="screenshot/data_05.jpg" alt="amazon" />
+               </div>
                 <div class="row row-6">
+                     <img src="screenshot/data_06.jpg" alt="yt" />
                 </div>
                 <div class="row row-7">
+                    20.31 HOURS WERE SPENT ON ENTERTAINMENT ALONE.
                 </div>
             </div>
 
             <div class="box box-3">
                 <div class="row row-8">
-                    Row eight
+                    <img src="screenshot/data_07.jpg" alt="hh" />
                 </div>
                 <div class="row row-9">
                     41.96 HOURS OF MY WEEK WERE SPENT ON TECHNOLOGY.                 
                 </div>
                 <div class="row row-10">
-                   Row ten
+                   <img src="screenshot/data_08.jpg" alt="pp" />
+                </div>
+            </div>
+
+            <div class="box box-4">
+                <div class="row row-11">
+                   I SPEND 5.61 HOURS A WEEEK ON TECHNOLOGY FOR EDUCATION
+                </div>
+                <div class="row row-12">
+                    <img src="screenshot/data_09.jpg" alt="ig" />
+                </div>
+                <div class="row row-13">
+                    <img src="screenshot/data_10.jpg" alt="h" />
+                </div>
+                <div class="row row-14">
+                    <img src="screenshot/data_11.jpg" alt="h" />
                 </div>
             </div>
 
