--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="screenshot/data_02.jpg" alt="canvas" />
                 </div>
                 <div class="row row-3">
-                     <img src="screenshot/data_03.jpg" alt="yt" />
+                     IN THIS WEEK, 6.55 HOURS WERE SPENT ON SOCIAL MEDIA.
                 </div>
             </div>
 
@@ -50,7 +50,7 @@
 
             <div class="box box-4">
                 <div class="row row-11">
-                   I SPEND 5.61 HOURS A WEEEK ON TECHNOLOGY FOR EDUCATION
+                   I SPEND 5.63 HOURS A WEEK FOR ONLINE SHOPPING.
                 </div>
                 <div class="row row-12">
                     <img src="screenshot/data_09.jpg" alt="ig" />
@@ -60,6 +60,18 @@
                 </div>
                 <div class="row row-14">
                     <img src="screenshot/data_11.jpg" alt="h" />
+                </div>
+            </div>
+
+             <div class="box box-5">
+                <div class="row row-15">
+                    <img src="screenshot/data_12.jpg" alt="ig" />
+                </div>
+                <div class="row row-16">
+                    <img src="screenshot/data_03.jpg" alt="ig" />
+                </div>
+                <div class="row row-17">
+                    9.47 HOURS WERE SPENT ON TECHNOLOGY FOR EDUCATION
                 </div>
             </div>
 
