saved so much, final

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="screenshot/data_03.jpg" alt="ig" />
                 </div>
                 <div class="row row-17">
-                    9.47 HOURS WERE SPENT ON TECHNOLOGY FOR EDUCATION
+                    9.47 HOURS WERE SPENT ON TECHNOLOGY FOR EDUCATION.
                 </div>
             </div>
 
